--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -29,7 +29,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,9 +53,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.3.11",
     "postcss-cli": "^9.0.2",
     "tailwindcss": "^2.2.19"
   },
-  "homepage": "http://localhost:3000/login"
+  "homepage": "https://guillermo-galdamez.github.io/Final-Proyect/"
 }
